<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:background="@drawable/hacker_code_background">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Forgot">

    <TextView
        android:id="@+id/Forgot_FlavorTextView"
        android:layout_width="306dp"
        android:layout_height="119dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="8dp"
        android:background="#FFFFFFFF"
        android:gravity="center"
        android:text="Oh No! You forgot something!"
        android:textSize="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Forgot_SecurityQuestionAnswerInputField"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="#E6FFFFFF"
        android:ems="10"
        android:gravity="center"
        android:hint="Security Question Answer"
        android:inputType="text"
        android:padding="1dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Forgot_SecurityQuestionTextView" />

    <CheckBox
        android:id="@+id/Forgot_UsernameCheckBox"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="150dp"
        android:background="#E6FFFFFF"
        android:text="Username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Forgot_SecurityQuestionAnswerInputField" />

    <CheckBox
        android:id="@+id/Forgot_PasswordCheckBox"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="150dp"
        android:background="#E6FFFFFF"
        android:text="Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Forgot_UsernameCheckBox" />

    <Button
        android:id="@+id/Forgot_SubmitButton"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="Submit Information Request"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Forgot_PasswordCheckBox" />

    <EditText
        android:id="@+id/Forgot_EmailInputField"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="#E6FFFFFF"
        android:ems="10"
        android:gravity="center"
        android:hint="Email"
        android:inputType="text"
        android:padding="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Forgot_FlavorTextView" />

    <Button
        android:id="@+id/Forgot_DisplaySecurityQuestionButton"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="Display My Security Question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Forgot_EmailInputField" />

    <ImageView
        android:id="@+id/Forgot_VCUImage"
        android:layout_width="272dp"
        android:layout_height="106dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vcu_logo" />

    <ImageButton
        android:id="@+id/Forgot_BackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Forgot_VCUImage"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_dialog" />

    <TextView
        android:id="@+id/Forgot_SecurityQuestionTextView"
        android:layout_width="303dp"
        android:layout_height="121dp"
        android:layout_marginTop="8dp"
        android:background="#E6FFFFFF"
        android:gravity="center_horizontal|center_vertical"
        android:hint="Security Question"
        app:layout_constraintEnd_toEndOf="@+id/Forgot_SecurityQuestionAnswerInputField"
        app:layout_constraintStart_toStartOf="@+id/Forgot_SecurityQuestionAnswerInputField"
        app:layout_constraintTop_toBottomOf="@+id/Forgot_DisplaySecurityQuestionButton" />

    <TextView
        android:id="@+id/Forgot_UsernameTextView"
        android:layout_width="220dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="#E6FFFFFF"
        android:gravity="center_horizontal|center_vertical"
        android:hint="--Username--"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Forgot_UsernameCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/Forgot_SecurityQuestionAnswerInputField" />

    <TextView
        android:id="@+id/Forgot_PasswordTextView"
        android:layout_width="220dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#E6FFFFFF"
        android:gravity="center_horizontal|center_vertical"
        android:hint="--Password--"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Forgot_UsernameCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/Forgot_UsernameTextView" />
</android.support.constraint.ConstraintLayout>
</ScrollView>