<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:background="@drawable/hacker_code_background">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login">

        <EditText
            android:id="@+id/Login_UsernameOrEmailInputField"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:background="#E6FFFFFF"
            android:ems="10"
            android:gravity="center"
            android:hint="Username / Email"
            android:inputType="textPersonName"
            android:padding="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Login_MainLogoImage" />

        <EditText
            android:id="@+id/Login_PasswordInputField"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#E6FFFFFF"
            android:ems="10"
            android:gravity="center"
            android:hint="Password"
            android:inputType="textPersonName|textPassword"
            android:padding="1dp"
            app:layout_constraintEnd_toEndOf="@+id/Login_UsernameOrEmailInputField"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/Login_UsernameOrEmailInputField"
            app:layout_constraintTop_toBottomOf="@+id/Login_UsernameOrEmailInputField" />

        <Button
            android:id="@+id/Login_LoginButton"
            android:layout_width="165dp"
            android:layout_height="47dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="96dp"
            android:text="Login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/Login_PasswordInputField"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Login_SignupButton" />

        <TextView
            android:id="@+id/Login_SignupDisplayTipView"
            android:layout_width="159dp"
            android:layout_height="22dp"
            android:layout_marginTop="32dp"
            android:background="#FFFFFFFF"
            android:gravity="center"
            android:padding="1dp"
            android:text="Don't have an account?"
            app:layout_constraintEnd_toEndOf="@+id/Login_PasswordInputField"
            app:layout_constraintTop_toBottomOf="@+id/Login_PasswordInputField" />

        <Button
            android:id="@+id/Login_SignupButton"
            android:layout_width="128dp"
            android:layout_height="36dp"
            android:layout_marginTop="8dp"
            android:text="Sign Up Here"
            app:layout_constraintEnd_toEndOf="@+id/Login_SignupDisplayTipView"
            app:layout_constraintStart_toStartOf="@+id/Login_SignupDisplayTipView"
            app:layout_constraintTop_toBottomOf="@+id/Login_SignupDisplayTipView" />

        <ImageView
            android:id="@+id/Login_VCURamImage"
            android:layout_width="158dp"
            android:layout_height="151dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/Login_LoginButton"
            app:layout_constraintHorizontal_bias="0.421"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Login_PasswordInputField"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ram_logo" />

        <ImageView
            android:id="@+id/Login_MainLogoImage"
            android:layout_width="274dp"
            android:layout_height="219dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.735"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/hh_logo" />

        <ImageView
            android:id="@+id/Login_TeamLogoImage"
            android:layout_width="76dp"
            android:layout_height="81dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/Login_MainLogoImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/team_logo" />

        <ImageButton
            android:id="@+id/Login_BackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Login_MainLogoImage"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/btn_dialog" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>